# maxwell_plus_freya

./: .gitignore  Cargo.toml  README.md
src/: components.rs  dialog_window.rs  functions.rs  main.rs
src/fdtd/: fdtd2d_TE.rs  fdtd2d_TM.rs  mod.rs
