[package]
name = "maxwell_plus_dioxus"
version = "0.1.0"
authors = ["krons2486 <vladk.711@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freya = "0.3.4"
dioxus = { version = "0.6", features = ["macro", "hooks"], default-features = true }
freya-core = "0.3.4"
skia-safe = { version = "0.82.0", features = ["gpu"]} 
dioxus-hooks = "0.6.2"
