[package]
name = "maxwell_plus_dioxus"
version = "0.1.0"
authors = ["krons2486 <vladk.711@gmail.com>"]
edition = "2021"
default-run = "maxwell_plus_dioxus"

[[bin]]
name = "maxwell_plus_dioxus"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
plot = ["freya/plot"]

[profile.release]
opt-level = "z"         # или "s" (баланс скорость/размер)
lto = "fat"             # максимально сжимает за счёт времени сборки
codegen-units = 1
panic = "abort"
strip = "symbols"       # требует свежий stable; иначе используйте отдельный strip

[dependencies]
freya = { git = "https://github.com/marc2332/freya.git", branch = "main", package = "freya", features = ["plot"]}
dioxus = { version = "0.6", features = ["macro", "hooks"], default-features = false }
freya-core = { git = "https://github.com/marc2332/freya.git", branch = "main", package = "freya-core" }
skia-safe = { version = "0.87.0", features = ["gpu"]} 
dioxus-hooks = "0.6.2"
serde = "1.0.228"
rfd = "0.15.4"
anyhow = "1.0.100"
toml = "0.9.7"
plotters = "0.3.7"
skia-plotters-backend = "0.1.0"